[tool.poetry]
name = "imgat"
version = "0.0.1"
description = "ImageAnalyzeTool"
authors = ["路绘唯梦 <liuliren.mm@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
